# PCFT

./: .gitignore  CMakeLists.txt  CMakeSettings.json  wisdom_output  wisdom_output_r
examples/: CMakeLists.txt  PCFT.cpp
include/: DomainParameters.hpp  GFunction.hpp  InputPage.hpp  OutputPackage.hpp  OutputPage.hpp  PCFTExecutor.hpp  ParameterPackage.hpp
include/numerics/: Constants.hpp  FFTWTransformer.hpp  FTFactory.hpp  IFourierTransformer.hpp  Preprocessor.hpp
include/tools/: Timer.hpp
src/: CMakeLists.txt  PCFT.cpp  PCFT.hpp  PCFTExecutor.cpp
src/numerics/: CMakeLists.txt  FFTWTransformer.cpp  FFTWTransformer.hpp  FTFactory.cpp  NaiveTransformer.cpp  NaiveTransformer.hpp  Preprocessor.cpp
src/tools/: CMakeLists.txt  Timer.cpp  Timer.hpp
test/: CMakeLists.txt  main.cpp  numericsTest.cpp
test/numerics/: numericsTests.hpp
test/src/numerics/: numericsTest.cpp  numericsTests.cpp
test/src/tools/: toolsTest.cpp
